--- a/slyles.css
+++ b/slyles.css
@@ -184,7 +184,7 @@ color: var(--second-text-color);
     padding-bottom: 117px;
 }
 .we-do-item {
-    width: calc((100%-48px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 .we-do-list {
     display: flex;
@@ -208,7 +208,7 @@ padding-bottom: 120px;
 background: #FFFFFF;
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 border-radius: 0px 0px 4px 4px;
-width: calc((100%-72px) / 4);
+width: calc((100% - 72px) / 4);
 }
 .card-content {
     padding: 32px 16px;
